ViewModels & Filter service

--- a/feature/flight-tickets/src/main/res/layout/card_search.xml
+++ b/feature/flight-tickets/src/main/res/layout/card_search.xml
@@ -49,13 +49,16 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
                     >
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dest_city"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
-                        android:text="Минск" />
+                        tools:text="@string/dest_city_default"
+                        />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <View
@@ -66,12 +69,14 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:paddingTop="8dp"
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dest_country"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Куда Турция hint"
+                        android:hint="@string/dest_country_hint"
                         />
                 </com.google.android.material.textfield.TextInputLayout>
             </LinearLayout>
