--- a/feature/flight-tickets/src/main/res/layout/fragment_dialog_search.xml
+++ b/feature/flight-tickets/src/main/res/layout/fragment_dialog_search.xml
@@ -68,6 +68,7 @@
                     android:layout_weight="1">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dest_city"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
@@ -110,9 +111,10 @@
                     app:hintEnabled="false">
 
                     <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/dest_country"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="Куда Турция hint" />
+                        android:hint="@string/dest_country_hint" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <FrameLayout
