--- a/feature/flight-tickets/src/main/res/layout/item_offer.xml
+++ b/feature/flight-tickets/src/main/res/layout/item_offer.xml
@@ -1,19 +1,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:background="@color/blue"
-    android:padding="16dp">
+    tools:background="@color/grey_2"
+    tools:theme="@style/Theme.Effectivem">
 
     <FrameLayout
-        android:layout_width="132dp"
+        android:minWidth="132dp"
+        android:layout_width="wrap_content"
         android:layout_height="132dp">
 
         <ImageView
             android:id="@+id/image"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:background="@drawable/shape_rounded_16"
+            android:adjustViewBounds="true"
+            android:clipToOutline="true"
             android:contentDescription="@string/cdimage"
             android:scaleType="centerCrop"
             android:src="@drawable/offer_3" />
@@ -21,28 +25,38 @@
         <ProgressBar
             android:id="@+id/loading"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </FrameLayout>
 
     <TextView
         android:id="@+id/title"
-        tools:text="Title"
+        style="@style/Theme.Effectivem.TextAppearance.TitleSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        android:paddingBottom="4dp"
+        android:paddingTop="8dp"
+        tools:text="Title" />
 
     <TextView
         android:id="@+id/town"
-        tools:text="Town"
+        style="@style/Theme.Effectivem.TextAppearance.BodyMedium"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        tools:text="Town" />
 
-    <TextView
-        android:id="@+id/price"
-        tools:text="Price"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:src="@drawable/flights"/>
+        <TextView
+            android:id="@+id/price"
+            style="@style/Theme.Effectivem.TextAppearance.BodyMedium"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Price" />
+    </LinearLayout>
 
 </LinearLayout>
