--- a/views/src/main/res/values/styles.xml
+++ b/views/src/main/res/values/styles.xml
@@ -28,8 +28,18 @@
         <item name="android:textSize">22sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+    <style name="Theme.Effectivem.TextAppearance.TitleSmall" parent="TextAppearance.Material3.TitleSmall">
+        <item name="android:fontFamily">@font/sf_pro_display_semibold</item>
+        <item name="android:textSize">16dp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
     <style name="Theme.Effectivem.TextAppearance.BodyLarge" parent="TextAppearance.Material3.BodyLarge">
         <item name="android:fontFamily">@font/sf_pro_display_semibold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+    <style name="Theme.Effectivem.TextAppearance.BodyMedium" parent="TextAppearance.Material3.BodyMedium">
+        <item name="android:fontFamily">@font/sf_pro_display_regular</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
@@ -47,6 +57,8 @@
     <!-- like MaterialTimePicker -->
     <style name="Theme.Effectivem.TextInputStyle" parent="Widget.Material3.TextInputLayout.OutlinedBox">
         <item name="materialThemeOverlay">@style/Theme.Effectivem.MaterialThemeOverlay</item>
+        <item name="boxStrokeWidth">0dp</item>
+        <item name="boxStrokeColor">@android:color/transparent</item>
     </style>
     <style name="Theme.Effectivem.MaterialThemeOverlay" parent="ThemeOverlay.Material3.TextInputEditText.OutlinedBox">
         <item name="editTextStyle">@style/Theme.Effectivem.TextInputEditText.OutlinedBox</item>
@@ -55,6 +67,7 @@
     <style name="Theme.Effectivem.TextInputEditText.OutlinedBox" parent="Widget.Material3.TextInputEditText.OutlinedBox">
         <item name="android:textAppearance">?attr/textAppearanceBodyLarge</item>
         <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="android:padding">0dp</item>
     </style>
 
 </resources>
