--- a/feature/profile/src/main/res/layout/fragment_profile.xml
+++ b/feature/profile/src/main/res/layout/fragment_profile.xml
@@ -7,7 +7,7 @@
     tools:context=".screens.home.HomeFragment">
 
     <TextView
-        android:id="@+id/hotels_text_home"
+        android:id="@+id/profile_text_home"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
