--- a/feature/flight-tickets/src/main/res/layout/card_search.xml
+++ b/feature/flight-tickets/src/main/res/layout/card_search.xml
@@ -49,16 +49,14 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingBottom="8dp"
-                    >
+                    android:paddingBottom="8dp" >
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/dest_city"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@null"
-                        tools:text="@string/dest_city_default"
-                        />
+                        tools:text="@string/dest_city_default" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <View
