--- a/feature/hotels/src/main/res/navigation/hotels_navigation.xml
+++ b/feature/hotels/src/main/res/navigation/hotels_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/hotels_navigation_home"
-        android:name="solutions.s4y.effectivem.hotels.ui.home.HomeFragment"
+        android:name="solutions.s4y.effectivem.hotels.screens.home.HomeFragment"
         android:label="@string/title_search"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_hotels" />
 
     <!-- android:name="solutions.s4y.effectm.hotels.ui.dashboard.DashboardFragment"-->
     <!--
