--- a/feature/profile/src/main/res/navigation/mobile_navigation.xml
+++ b/feature/profile/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="solutions.s4y.effectivem.profile.ui.home.HomeFragment"
+        android:name="solutions.s4y.effectivem.profile.screens.home.HomeFragment"
         android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
-
-    <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="solutions.s4y.effectivem.profile.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
-
-    <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="solutions.s4y.effectivem.profile.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_profile" />
 </navigation>
